--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="stop_record">Stop record</string>
     <string name="start_read">Start read</string>
     <string name="stop_read">Stop read</string>
-    <string name="fret_default">--</string>
+    <string name="empty_note">--</string>
     <string name="new_bar">|</string>
     <string name="choose_bpm">Укажите темп игры</string>
     <string name="ok">Ок</string>
@@ -15,5 +15,6 @@
     <string name="unexpected_err">Произошла внутренняя ошибка!</string>
     <string name="exit">Выход</string>
     <string name="folder_not_found">Не найдена папка конфигураций</string>
+    <string name="new_note">Новая нота</string>
 
 </resources>
