--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,7 @@
 <resources>
     <string name="app_name">AudioControl</string>
-    <string name="start_record">Start record</string>
-    <string name="stop_record">Stop record</string>
-    <string name="start_read">Start read</string>
-    <string name="stop_read">Stop read</string>
+    <string name="start_record">Начать запись</string>
+    <string name="stop_record">Закончить запись</string>
     <string name="empty_note">--</string>
     <string name="new_bar">|</string>
     <string name="choose_bpm">Укажите темп игры</string>
@@ -19,8 +17,10 @@
     <string name="visualization_switch">Включить визуализацию</string>
     <string name="calibration_button">Калибровка</string>
     <string name="buffer_size">Размер буфера</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="error_tab_loading">Ошибка загрузки табулатуры!</string>
+    <string name="menu">Меню</string>
+    <string name="exit_without_saving">Выйти\n без сохранения</string>
+    <string name="continue_record">Продолжить</string>
+    <string name="warning_not_saved">Несохраненные данные будут потеряны!</string>
 
 </resources>
