--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,12 @@
     <string name="exit_without_saving">Выйти\n без сохранения</string>
     <string name="continue_record">Продолжить</string>
     <string name="warning_not_saved">Несохраненные данные будут потеряны!</string>
+    <string name="temp">Установите темп</string>
+    <string name="file">Выберите файл</string>
+    <string name="settings">Настройки</string>
+    <string name="tab_name">Введите название таба</string>
+    <string name="save">Сохранить</string>
+    <string name="new_tab">Новый таб 1</string>
+
 
 </resources>
