--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,7 @@
     <string name="buffer_size">Размер буфера</string>
     <string name="error_tab_loading">Ошибка загрузки табулатуры!</string>
     <string name="menu">Меню</string>
-    <!--<string name="exit_without_saving">Выйти\n без сохранения</string>-->
-    <string name="exit_without_saving">Не\n сохранять</string>
+    <string name="exit_without_saving">Не\nсохранять</string>
     <string name="continue_record">Продолжить</string>
     <string name="warning_not_saved">Несохраненные данные будут потеряны!</string>
     <string name="temp">Установите темп</string>
@@ -34,7 +33,7 @@
     </string>
 
 
-    <string name="calibrate">Определите частоту ноты ля первой октавы</string>
+    <string name="calibrate">Определите частоту ноты ля малой октавы</string>
     <string name="default_calibrate_text">Нажмите чтобы начать</string>
     <string name="stop">Стоп</string>
     <string name="start">Старт</string>
